# founding-engineer-nutrition-label-parser-takehome-

./: .editorconfig  .gitignore  Dockerfile  SUBMISSION.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/actions/load-cached-docker-image/: action.yml
.github/workflows/: python-matrix-test.yml  python-test.yml
nutrition_label_parser/: config.py  extractor.py  main.py  models.py  normaliser.py  nutrient_map.py  pipeline.py
output/: nutrition_data.csv
tests/: test_main.py  test_models.py  test_normaliser.py
